tests/profile/error/time/wrongvalue_type.profile
{
  "version": { "major": 12, "minor": 13 },
  "time": {
    "type": "ER",
    "value": "2020-06-01T12:00:00"
  }
}
